--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,17 +14,20 @@
       <h2 class="mb-5"> Users </h2>
       <% if @users %>
         <% @users.each do |user| %>
-          <div><%=link_to user.username, user_path(id: user.id) %></div>
+          <div class="d-flex mb-2">
+            <%= image_tag user.avatar, size: '50x50', class: "rounded-circle" %>
+            <%=link_to user.username, user_path(id: user.id), class: "mx-2 align-self-center" %>
+          </div>
         <% end %>
       <% end %>
     </div>
     <div class="p-5 w-100">
       <h2 class="mb-5"> Rankings </h2>
-      <% @games1 = User.all.group(:game1).count %>
-      <% @games2 = User.all.group(:game2).count %>
-      <% @total_games = @games1.merge!(@games2) { |k, o, n| o + n }.sort_by { |k, v| v}.reverse %>
-      <% @total_games.map do |k, v| %>
-      <div><b><%= k %></b> : <%= v %></div>
+      <% @total_votes = Vote.all.group(:name).average(:average).sort_by { |_k, v| v }.reverse %>
+      <% @total_votes.map do |k, v| %>
+      <div>
+        <b><%= k %></b> : <%= v.round(2) %>
+      </div>
       <% end %>
     </div>
   </div>
